// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty 1`] = `
Object {
  "absNodeModulesPath": "./node_modules",
  "absOutputPath": "./dist",
  "absPagesPath": "./pages",
  "absSrcPath": ".",
  "absTmpPath": "./.umi",
  "cwd": ".",
}
`;

exports[`empty config outputPath 1`] = `
Object {
  "absNodeModulesPath": "./node_modules",
  "absOutputPath": "./www",
  "absPagesPath": "./pages",
  "absSrcPath": ".",
  "absTmpPath": "./.umi",
  "cwd": ".",
}
`;

exports[`empty config singular 1`] = `
Object {
  "absNodeModulesPath": "./node_modules",
  "absOutputPath": "./dist",
  "absPagesPath": "./page",
  "absSrcPath": ".",
  "absTmpPath": "./.umi",
  "cwd": ".",
}
`;

exports[`empty production 1`] = `
Object {
  "absNodeModulesPath": "./node_modules",
  "absOutputPath": "./dist",
  "absPagesPath": "./pages",
  "absSrcPath": ".",
  "absTmpPath": "./.umi-production",
  "cwd": ".",
}
`;

exports[`src 1`] = `
Object {
  "absNodeModulesPath": "./node_modules",
  "absOutputPath": "./dist",
  "absPagesPath": "./src/pages",
  "absSrcPath": "./src",
  "absTmpPath": "./src/.umi",
  "cwd": ".",
}
`;

exports[`src config singular 1`] = `
Object {
  "absNodeModulesPath": "./node_modules",
  "absOutputPath": "./dist",
  "absPagesPath": "./src/page",
  "absSrcPath": "./src",
  "absTmpPath": "./src/.umi",
  "cwd": ".",
}
`;
